# rescript-evaluate

./: README.md  pyproject.toml
conda-recipe/: meta.yaml
rescript_evaluate/: cross_validate.py  plugin_setup.py
rescript_evaluate/tests/: test_cross_validate.py
