[project]
name = "rescript_evaluate"
authors = [
    { name = "Nicholas Bokulich", email = "nbokulich@gmail.com" }
]
description = "Reference sequence annotation and curation"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mikerobeson/rescript_evaluate"
Repository = "https://github.com/mikerobeson/rescript_evaluate"

[project.entry-points.'qiime2.plugins']
"rescript_eval" = "rescript_eval.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rescript_eval*"]

[tool.setuptools.package-data]
rescript_eval = ["**/*"]
